      this you are probably upgrading which is good.

0.078 2007-01-09
    - Maintenance release by Andy Armstrong <andy@hexten.net>
    - Rewrote tests to use Test::More
    - Implemented mod_perl 2 support

0.080 2007-03-30
    - Fixed problem parsing query args containing '='. Thanks to Ewan
      Edwards for the patch.
      
0.081 2007-05-20
    - Fix for sysread under mod_perl. Thanks to Joshua N Pritikin for
      the patch.

0.082 2007-05-22
    - Added REST support. Thanks to Mike Barry for the patch.

0.83  2007-05-22
    - Big version jump to move version past badly formatted version in
      Cookie, Util.

1.0  2007-05-24
   - Another big version jump. I think we're about ready for 1.0.
   - Fixed skip count under Win32 in t/40.request.t [27257]. Thanks to
     ISHIGAKI for the patch.

1.1  2007-07-13
   - Added support for Set-Cookie as per CGI.pm patch 15065. Thanks to
     Patrick M. Jordan for the suggestion.

1.1.1   2007-07-31
      - Removed nasty global trap of __DIE__ in CGI::Standard. Thanks to
        Jeremy Morton for reporting it.

1.1.2   2007-07-31
      - Fixed module names in POD for CGI::Simple::Cookie,
        CGI::Simple::Util [#27597]. Thanks to BRICAS for reporting it.

1.103   2007-07-31
      - Version number chaos continues. One tends to forget that there
        is a strange universe in which 1.1 > 1.1.2.

1.104   2008-05-13
      - Switched from sysread to read. Fixes #35844: sysread used in
        CGI::Simple blocks on re-directed STDIO reads. Thanks to
        Damjan Pelemis.

1.105   2008-05-16
      - Fixed skip count in t/040.request.t. Fixes #35945. Thanks
        to snaury.

1.106   2008-09-14
      - Added missing Apache2 modules. Refs #39146 and #38931. Thanks
        to RSAVAGE.
      - Applied BEROV's patch for UTF-8 form data handling. Refs #12481.
        Thanks to BEROV.

1.107   2009-03-07
      - Correctly trim leading /and/ trailing spaces from cookies.
